# minecraft-bevy-rust

./: Cargo.toml  todo.md
.cargo/: config.toml
assets/textures/: blocks.tps  clear_sky.ktx2  spritesheet.json
src/: main.rs  skybox.rs  terrain.rs  ui.rs
