[package]
name = "minecraft-bevy-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.11.2", features = ["dds", "ktx2", "zstd", "dynamic_linking"] }
bevy_rapier3d = "0.22.0"
bevy_fps_controller = "0.2.2"
bevy_common_assets = { version = "0.7.0", features = ["json"] }
rand = "0.8.5"
noise = "0.8.2"
block-mesh = { git = "https://github.com/seriousdev-gh/block-mesh-rs.git" }
serde = "1.0.150"
fast_poisson = { version = "0.5.2", features=["single_precision"] }